Aggiunto script per gestire un evento click e una modifica del dom

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
 <!--il mio nome da battaglia e' HACE-->
 <header>
-    <h1> HACE </h1>
+    <h1 id="titolo-guerriero"> HACE </h1>
     <nav>
         <a>Home</a>
         <a>About</a>
@@ -78,5 +78,6 @@
 <footer>
     Dojo Frontend 2025
 </footer>
+<script src="index.js"></script>
 </body>
 </html>
